refactor: java 8 compat (#516)