@@ -15,6 +15,7 @@ import com.sekwah.advancedportals.core.warphandler.Tag;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CreateDestiSubCommand extends CreateTaggedSubCommand {
     @Inject
@@ -90,13 +91,13 @@ public class CreateDestiSubCommand extends CreateTaggedSubCommand {
 
     @Override
     protected List<Tag> getRelatedTags() {
-        var tags = tagRegistry.getTags();
+        List<Tag> tags = tagRegistry.getTags();
         // Filter tags that support Destination
         return tags.stream()
             .filter(tag
                     -> Arrays.asList(tag.getTagTypes())
                            .contains(Tag.TagType.DESTINATION))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Override
